<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cprieto.repeticionexamen2evaluacion.fragment.FragmentEditar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txvAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/txvEdit"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Switch
            android:id="@+id/swEditar"
            style="@style/MySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvAdd"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/swEditar" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/swEditar"
            android:layout_alignBottom="@+id/swEditar"
            android:layout_toEndOf="@+id/swEditar"
            android:background="@color/colorAccent"
            android:text="@string/btnBorrar" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/flEdtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/swEditar"
            float:fletTextAppearance="@style/floatlabelededittext">

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:enabled="false"
                android:hint="Nombre" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <!--<EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/swEditar"
            android:layout_margin="20dp"
            android:enabled="false"
            android:hint="@string/edtNombre"
             />-->

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/flEdtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/flEdtNombre"
            float:fletTextAppearance="@style/floatlabelededittext">

            <EditText
                android:id="@+id/edtEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:enabled="false"
                android:hint="Edad" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <!--<EditText
            android:id="@+id/edtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtNombre"
            android:layout_margin="20dp"
            android:enabled="false"
            android:hint="@string/edtEdad"
             />-->

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/flEdtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/flEdtEdad"
            float:fletTextAppearance="@style/floatlabelededittext">

            <EditText
                android:id="@+id/edtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:enabled="false"
                android:hint="Telefono" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <!--<EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtEdad"
            android:layout_margin="20dp"
            android:enabled="false"
            android:hint="@string/edtTelefono"
             />-->

        <TextView
            android:id="@+id/txvSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flEdtTelefono"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/txvSexo"
            android:textColor="@color/colorAccent" />

        <RadioGroup
            android:id="@+id/rdgSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvSexo"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/rdbHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/rdbHombre" />

            <RadioButton
                android:id="@+id/rdbMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/rdbMujer" />

        </RadioGroup>

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rdgSexo"
            android:layout_margin="20dp"
            android:background="@color/colorAccent"
            android:enabled="false"
            android:text="@string/btnAceptar" />

    </RelativeLayout>

</ScrollView>
